(library
 (name block_producer_test)
 (inline_tests)
 (libraries
  ;; opam libraries
  sexplib0
  async_kernel
  core_kernel
  core
  async
  async_unix
  ppx_inline_test.config
  ;; local libraries
  mina_metrics
  mina_net2
  debug_assert
  blockchain_snark
  with_hash
  truth
  mina_numbers
  transaction_snark
  ledger_proof
  error_json
  currency
  logger
  signature_lib
  transition_frontier
  transaction_snark_scan_state
  prover
  mina_state
  mina_intf
  mina_base
  mina_block
  consensus
  interruptible
  o1trace
  pipe_lib
  network_pool
  unix_timestamp
  otp_lib
  transition_chain_prover
  vrf_evaluator
  transition_frontier_base
  block_time
  staged_ledger
  staged_ledger_diff
  mina_compile_config
  precomputed_values
  coda_genesis_proof
  transition_frontier_extensions
  unsigned_extended
  genesis_constants
  data_hash_lib
  child_processes
  verifier
  trust_system
  block_producer
  snark_work_lib
  transaction_snark_work
  parallel)
 (preprocess
  (pps ppx_coda ppx_version ppx_jane ppx_register_event)))
